dppl/3.0/en.rst
.. _dppl_v3_en:

Digital Peer Publishing Licence (v3, en)
========================================

HTML Version of the DPPL (Version 3, English

Version 3.0 – November 2008

Copyright © 2004-2008 Ministerium für Innovation, Wissenschaft,
Forschung und Technologie des Landes Nordrhein-Westfalen (Ministry of
Innovation, Science, Research and Technology, State of North-Rhine
Westphalia)

Developed and created by Axel Metzger and Till Jaeger, Institut für
Rechtsfragen der Freien und Open Source Software (Institute for Legal
Issues on Free and Open Source Software), http://www.ifross.de/

Preamble
--------

The Internet has caused profound changes in the conditions of academic
activities. Vast numbers of documents are available via publicly
accessible websites. Traditional academic and scientific media such as
academic journals and publications in book form are being complemented
or even replaced by electronic versions. At the same time, researchers
and scientists pass on their sources of all kinds by means of individual
communication in data networks. This process is expressly supported by
the leading German research organisations in the Berlin Declaration
(http://www.zim.mpg.de/openaccess-berlin/berlindeclaration.html).

The new communication possibilities allow academic content to be
disseminated in a decentralised manner - in a fast, transparent way,
closely related to research. Scientific researchers are regularly
interested in making their findings widely available at a high level of
quality. It goes without saying that the individual's work is respected,
and recognised and secured for example by citing the author. The aim of
this Digital Peer Publishing Licence is to ensure that this process
takes place in a fair, transparent and secure way for all those
involved.

This Digital Peer Publishing Licence provides the contractual basis for
publishing documents in e-journals as described above. The licence
allows any user to pass the document on in electronic form, e.g. to make
it publicly available in networks.

Passing documents on is, however, subject to certain obligations,
particularly concerning citing the names of authors and holders of
rights and the bibliographical information used, in order to guarantee a
standard form of citation. The licence does not grant a right to use
altered versions of the work.

The rights to Use in physical form, particularly the rights to
distribute the work in printed form, on storage media or in
print-on-demand services, are retained by the author or other rights
holders and are not covered by this licence. This firstly promotes
electronic publishing, and secondly allows the rights holder the
possibility of granting the rights of physical distribution of issues of
the work to an individual party, for example a commercial publishing
company. Those who wish to publish their work in parallel under this
licence and via a publishing company should ensure that the publishing
agreement does not assign the exclusive rights of providing public
access to the publishing company, but rather simple, non-exclusive,
rights at most.

The terms of this licence are an offer to any party to conclude a
license agreement upon the conditions contained therein. The agreement
comes into force by the act of the user making use of the rights
specified in this license agreement.

Potential licensors are either publishers of e-journals, if they hold
the exclusive usage rights to the articles, or the authors themselves,
in case they own all title to their articles. The license agreement is
equally suited to both these cases.

Clause 1: Definitions
---------------------

§ 1: Definitions
~~~~~~~~~~~~~~~~

The following terms shall be used in the license agreement with the
following standard meanings:

(a) "Digital Signature": Data in electronic form which are attached or
logically linked to the Work and have the purpose of authenticating the
author or holder of an exclusive right to Use.

(b) "History": Information on the Work, particularly on the authors, the
history of its creation or the version of the Work, which is directly
inserted into the Work or attached to it in a separate file for the
purpose of informing the user. The History may also contain information
concerning where the author makes updated versions of the Work available
or listing subsequent corrections to the content.

(c) "Licensor": The holder of the copyright and his or her legal
successor, or the holder of an exclusive right to Use for the Work, who
offers to conclude this license agreement.

(d) "Metadata": Machine-readable, structured information on the Work,
which is contained in the Work for the purpose of simplified
machine-locatability of the Work and/or efficient administration of data
(e.g. "HTML metatags").

(e) "Metadata Model": A standardised structure for collecting Metadata
with defined elements for describing resources (e.g. "Dublin Core
Metadata Element Set").

(f) "Use": Any use of the Work for which the permission of the author or
holder of an exclusive right to Use is necessary under copyright law,
e.g. passing on the Work or making it available for downloading.

(g) "Open File Format": A document format which is written in a standard
freely accessible to any party and which may be implemented in a
computer program by any party, without limitations and free of licence
fees, e.g. Open Document Format (ODP), Portable Document Format (PDF),
DocBook XML and Hypertext Markup Language (HTML) .

(h) "You": The licensee - any party concluding this license agreement.

(i) "Altered Version": Any version of the Work in which You or a third
party have made changes, regardless of whether the changes themselves
reach the level of copyright protectability or not. Cases in which the
law permits publication and passing on without consent ("fair use") are
excepted.

(j) "Physical Copy": Any physical copy, reproduction or piece of the
Work, i.e. the Work in its embodied form (e.g. as a printed book or on
CD-ROM).

(k) "Work": The work protected by copyright, to which the rights to Use
are granted by this license agreement.


Clause 2: Rights to Use
-----------------------

§ 2: Granting of Rights to Use
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) This license agreement shall, unrestricted by time and place, allow
You to reproduce the Work in electronic form, to pass the Work on to
third parties by electronic means, e.g. by e-mail communication, and -
particularly by making it available for download - to make it publicly
accessible. The license shall comprise all types of use of the work that
encompass non-physical reproduction or conveyance of the Work, whether
already known or unknown at the time of conclusion of this license
agreement. Use in physical form, particularly the distribution of
printed Works, and the Use of Altered Versions of the Work shall not be
permitted.

(2) This license agreement shall further entitle You to incorporate the
Work in electronic databases or other collections. Should You attain
Your own rights to databases or collective works, You may not use these
to restrict or prevent further Use of the Work.

(3) Rights to Use the Work shall be granted by this license agreement
free of any licence fees.

(4) This license agreement has the intention of strengthening the
provision of authentic information in the Internet. For this reason, Use
of Altered Versions of the Work shall not be permitted.

Clause 3: Terms of Use
----------------------

§ 3: No Obligation to Use Free of Charge
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This license agreement does not oblige You to Use the Work free of
charge. You may agree on the payment of a fee with the user as
consideration for the access to the Work or for the procurement of a
Physical Copy via electronic forwarding in a data network. However, You
may not make the further Use by the acquirer contingent upon further
payments, since the acquirer does not receive the necessary rights to
Use from You but from the Licensor.

§ 4: Open Access
~~~~~~~~~~~~~~~~

(1) In case You Use the Work, You may not prevent or impede the further
Use by third parties by means of technical protective measures,
particularly through the Use of copy protection measures of any kind. A
password-protected access restriction or Use within an Intranet
structure shall not be regarded as a technical protective measure.

(2) In case You have received the document in an Open File Format, You
may not Use it in a non-open file format without the prior express
consent of the author or holder of an exclusive right to Use. Consent
shall be granted in the event that improved access to the Work may be
expected due to a high circulation level of the file format, and that
the file format is suitable for the presentation of the Work.


§ 5: Citation of Names of Authors and Holders of Rights to Use
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) In case You Use the Work, You shall cite the names of authors -
author or copyright references - in the same form as it has been
included in the document. This shall also apply to citing the holder of
an exclusive right to Use, in case these are cited in connection with
the Work.

(2) In case the Work is integrated into a more extensive collected
edition, such as a collective Work or database, You are obliged to
ensure the citation of the authors and holders of an exclusive right to
Use in a suitable and standard form for the type to Use.

(3) You may not alter or remove any Digital Signatures which the author
or holder of an exclusive right to Use has added to the Work and which
confirm the authenticity or origin of the Work, except when this is
necessary to convert the Work into another file format permitted in
accordance with § 4.2.

§ 6: Quotation and Metadata
~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) In order to guarantee a standardised quotation form of the Work and
lasting locatability of the document for any party despite the possible
decentralised electronic use, You may neither alter nor remove
bibliographical information regarding the original location where the
document was found, when using the Work. However, You may add additional
bibliographical information.

(2) You may not remove Metadata that the author or holder of an
exclusive right to Use has added to the Work, except when this is
necessary to convert the Work into an Open File Format.

(3) Metadata which the author or holder of an exclusive right to Use has
added to the Work may be adapted to other Metadata Models, in case this
serve the purpose of simplified locatability of the document or the
standardisation of Metadata structures.

§ 7: Concurrent Provision of Further Information
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) In case You exercise the rights to Use granted by this license
agreement, You shall always include the text of this licence in the
German and the English language accompanying the Work, or to quote a
source under which both versions of this licence may be permanently be
retrieved by electronic means in the usual way, preferably by download
from the Internet, for example from the site
`http://www.dipp.nrw.de/. <../../../>`__

(2) You may neither alter nor remove references to this licence which
the author or holder of an exclusive right to Use has added to the Work.

(3) In case a History is included into the Work, You may only pass the
Work on along with the complete and unaltered History.

§ 8: Combination with other content
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) The Licensor may combine the Work with other content that may be
used under the terms of the Creative Commons license "Attribution" and
use the combination, as long as the Work and the other content may still
be used separately (e.g. combination of text and photography).

(2) If the Licensor has combined the Work with other content according
to paragraph 1, You may not remove or alter any notice stating that the
Creative Commons license applies to the other content and you may not
use the Work without the other content. You have to comply with the
terms of the Creative Commons license for Your use of the other
content.  

(3) You may not use any combination of the Work with other content.

Clause 4: Conclusion and Termination of this Agreement; Reservation of Statutory Rights
---------------------------------------------------------------------------------------

§ 9: Conclusion
~~~~~~~~~~~~~~~

The text of this licence constitutes an offer made to You, intended for
the conclusion of a license agreement under the terms and conditions
specified in this license agreement. You do accept the offer by
exercising the rights listed in § 2 of the agreement. Notice of
acceptance does not need to be sent to the Licensor.

§ 10: Termination of Rights to Use
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) In case You violate the obligations set forth in §§ 2 thru 8 of this
agreement, the rights to Use granted to You by the Licensor under this
agreement shall automatically become invalid. You may then no longer Use
the Work. If you comply with the terms of this license you may conclude
a new licence agreement.

(2) The rights of beneficial Use of third parties who have attained the
Work from You shall not be affected by a devolution of the rights to
Use.

§ 11: Reservation of Statutory Rights
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) The subject-matter of this licence shall be exclusively the granting
of rights to Use in order to make the Work available to the public or to
individuals in electronic form. Such beneficial rights to use the Work
resulting from the statutory restrictions of copyright, for example
reproduction for private use, quotation rights, etc., shall not fall
under the scope of this licence. It is not necessary to conclude this
license agreement in order to make legal use of such rights.

(2) Statutory remuneration rights arising from a use of the Work
according to paragraph 1 and administered by collecting societies (e.g.
royalties on blank recording media) are reserved.

Clause 5: Liability and Warranty
--------------------------------

§ 12: Liability and Warranty
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

The Licensor's liability towards You is limited to fraudulent
concealment of defects.

§ 13: Liability in the Event of Third Party Claims
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

In case claims for damages and/or litigation costs are asserted against
the parties of this agreement, either individually or jointly, by third
parties on the basis of the content of the Work, each party shall be
proportionally liable corresponding to the ratio of its own fault. The
licensee shall bear sole liability if the Licensor has included into the
Work a source where subsequent corrections are listed, and if the
content comprising the subject-matter of the asserted third-party claim
has already been corrected or deleted in this source at the time of the
infringing act.

Clause 6: The License Agreement
-------------------------------

§ 14: Relationship of the Language Versions
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This license agreement has been drawn up in German and English. Both
versions shall be equally binding. It shall be assumed that the terms
used in the license agreement have the same meaning in both versions.
Should differences or uncertainties arise, however, such meaning shall
prevail which best aligns the versions with each other, under
consideration of the objective and purpose of the license agreement.

§ 15: New Versions of Licence
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

(1) The Ministry of Innovation, Science, Research and Technology, State
of North-Rhine Westphalia (or its legal successor) may bring new
versions of the license agreement into force with binding effect in case
this is necessary and appropriate. New versions of the license agreement
shall be made available in the Internet at
`http://www.dipp.nrw.de/ <../../../>`__ with an express version number.
The new version of the license agreement shall come into binding effect
for You at the time when You become aware of its publication. Statutory
redress against the alteration of the license agreement shall not
restricted by the above stipulations.

(2) You may reproduce and distribute this license agreement and make it
publicly available in unaltered form.

§ 16: Applicable Law
~~~~~~~~~~~~~~~~~~~~

This license agreement shall be governed by German law.


Annex
-----

In order to enable any party to conclude this license agreement, it is
recommended that You provide the Work with the following reference to
the license agreement:

"Any party may pass on this Work by electronic means and make it
available for download under the terms and conditions of the Digital
Peer Publishing Licence (DPPL). The text of the licence may be accessed
and retrieved via Internet at
http://nbn-resolving.de/urn:nbn:de:0009-dppl-v3-en8 ."

If the Licensor has combined the Work with other content that may be
used under different licence terms (Creative Commons Licence
"Attribution") you should amend the licence notice as follows:

"Contents owned by third parties are identified by appropriate notice
and may be used under the terms of the indicated license terms."
